--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "ejs": "^3.1.5",
     "express": "^4.17.1",
-    "multer": "^1.4.2"
+    "express-async-handler": "^1.1.4",
+    "multer": "^1.4.2",
+    "uuid": "^8.3.0"
   }
 }
