--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express-async-handler": "^1.1.4",
     "express-session": "^1.17.1",
     "google-auth-library": "^6.0.6",
+    "helmet": "^4.1.0",
     "multer": "^1.4.2",
     "uuid": "^8.3.0"
   }
