--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "google-auth-library": "^6.0.6",
     "helmet": "^4.1.0",
     "multer": "^1.4.2",
-    "uuid": "^8.3.0"
+    "uuid": "^8.3.0",
+    "winston": "^3.3.3"
   }
 }
